0.24.2	UNRELEASED

 * Fix merge functionality to gracefully handle missing optional merge3 dependency
   by raising informative ImportError with installation instructions.
   (Jelmer Vernooĳ, #1759)

 * Fix worktree CLI tests to properly change to repository directory.
   (Jelmer Vernooĳ, #1738)

 * Add ``temporary_worktree`` context manager for creating temporary worktrees
   that are automatically cleaned up. (Jelmer Vernooĳ)

 * Add ``exist_ok`` parameter to ``add_worktree`` to allow creation with
   existing directories. (Jelmer Vernooĳ)

 * Add colorized diff support for the ``show`` command with ``--color``
   argument. (Jelmer Vernooĳ, #1741)

 * Fix Windows path handling in ``_ensure_parent_dir_exists`` to correctly
   handle drive letters during checkout operations. (Jelmer Vernooĳ, #1751)

 * Fix Windows config loading to only use current Git config path,
   avoiding loading older config files.  (Jelmer Vernooĳ, #1732)

 * Add interactive rebase support with ``git rebase -i``, including support
   for pick, reword, edit, squash, fixup, drop, exec, and break commands.
   (Jelmer Vernooĳ, #1696)

 * Fix handling of CRLF line endings with ``core.autocrlf = input`` to prevent
   unchanged files from appearing as unstaged in status.
   (Jelmer Vernooĳ, #1770)

 * Add support for ``http.extraHeader`` configuration to pass additional HTTP
   headers to the server when communicating over HTTP(S).
   (Jelmer Vernooĳ, #1769)

 * Optimize LFS filter performance by avoiding redundant disk writes when
   checking file status. The LFS store now checks if objects already exist
   before writing them to disk, significantly improving ``git status``
   performance in repositories with many LFS-tracked files.
   (Jelmer Vernooĳ, #1789)

 * Add support for ``patiencediff`` algorithm in diff.
   (Jelmer Vernooĳ, #1795)

 * Add IPv6 support for git:// protocol URLs.
   (Jelmer Vernooĳ, #1796)

0.24.1	2025-08-01

 * Require ``typing_extensions`` on Python 3.10.